--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <h3>Create a toy!</h3>
 
         <input
+          id="input-text"
           type="text"
           name="name"
           value=""
-          placeholder="Enter a toy's name..."
+          plceholder="Enter a toy's name..."
           class="input-text"
         />
         <br />
         <input
+          id="input-image"
           type="text"
           name="image"
           value=""
